# aind-data-upload-utils

./: Dockerfile  README.md  log_config_template.yaml  pyproject.toml
.github/workflows/: run_tests.yml  tag_and_publish.yml
doc_template/source/: conf.py
scripts/: singularity_build.def
src/aind_data_upload_utils/: __init__.py  check_directories_job.py  check_metadata_job.py  co_cleanup_notification.py  copy_metadata_files.py  create_s5_commands_job.py  create_sym_links_job.py  delete_folders_job.py  delete_source_folders_job.py  delete_staging_folder_job.py  trigger_co_cleanup_notification.py
tests/: test_check_directories_job.py  test_check_metadata_job.py  test_co_cleanup_notification.py  test_copy_metadata_files.py  test_create_s5_commands_job.py  test_create_sym_links_job.py  test_delete_folders_job.py  test_delete_source_folders_job.py  test_delete_staging_folder_job.py  test_trigger_co_cleanup_notification.py
tests/resources/: example_capsules.csv  exclude_list.txt
tests/resources/metadata_dir/: data_description.json  procedures.json  processing.json  rig.json  session.json  subject.json
